# kunitori-py

./: .gitignore  README.md  pyproject.toml
src/kunitori/: __init__.py  aggregator.py  cli.py  revision_searcher.py  visualizer.py
src/kunitori/config/: logging.json
src/kunitori/templates/: chart.j2
tests/: test_kunitori.py
